fixed modal box overflow issue

--- a/css/mobilecss.css
+++ b/css/mobilecss.css
@@ -113,9 +113,9 @@
 
     .projectInfo {
         order: 3;
-        padding: 40px;
+        padding: 30px;
         margin-left: 0;
-        margin-top: 20vh;
+        margin-top: 10vh;
     }
 }
 
