--- a/css/projectscss.css
+++ b/css/projectscss.css
@@ -47,7 +47,7 @@ figcaption {
     padding: 0;
     border: 1px solid #888;
     width: 80%;
-    height: 60vh;
+    height: 80%;
     display: flex;
     flex-direction: row;
 }
@@ -61,13 +61,15 @@ figcaption {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     object-fit: cover;
     width: 30vw;
-    height: 60vh;
+    height: 80%;
 }
 
 .projectInfo {
     order: 2;
     padding: 40px;
     margin-left: 30vw;
+    height:80%;
+    overflow: auto;
 }
 
 
